Move to Builder approach for `DefaultResultSetMapper`